# daily-research-digest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-site.yml  digest.yml  publish.yml
arxiv_digest/: __init__.py  client.py  digest.py  memory.py  models.py  ranker.py  scheduler.py  storage.py
arxiv_digest/sources/: __init__.py  semantic_scholar.py
daily_research_digest/: __init__.py  client.py  config_env.py  digest.py  digest_renderer.py  digest_send.py  digest_state.py  email_provider.py  models.py  quality.py  ranker.py  scheduler.py  storage.py
daily_research_digest/sources/: __init__.py  huggingface.py  semantic_scholar.py
issues/: 2026-01-27-issue-1.md  2026-01-27-issue.json  extra_questioning_about_paper.md  issue_2026_01_27.md
tests/: __init__.py  conftest.py  test_client.py  test_config_env.py  test_digest.py  test_digest_renderer.py  test_digest_state.py  test_email_provider.py  test_huggingface.py  test_memory.py  test_models.py  test_quality.py  test_ranker.py  test_scheduler.py  test_semantic_scholar.py  test_storage.py
tests/fixtures/: arxiv_response.xml
